--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3||^8.0",
         "ext-pdo": "*",
         "doctrine/dbal": "^2.12",
         "facade/flare-client-php": "^1.3",
